--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <body>
+    <header><h1>RRR</h1></header>
+    <nav>
+      <a id="nav-actor" href="#actor">Actors</a>
+      <a id="nav-quote" href="#quote">Quotes</a>
+    </nav>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <summary>
+      A fictitious story about two legendary revolutionaries and their journey
+      away from home before they started fighting for their country in the
+      1920s.
+    </summary>
 
-</body>
+    <section>
+      <h3>Actors</h3>
+      <p>N.T. Rama Rao Jr.</p>
+      <p>Ram Charan Teja</p>
+      <p>Ajay Devgn</p>
+      <p>Alia Bhatt</p>
+      <p>Olivia Morris</p>
+      <p>Shriya Saran</p>
+    </section>
+	
+    <section>
+      <h3>Quotes</h3>
+      <p>To capture the tiger we need a hunter.</p>
+    </section>
 
+    <aside>
+      <p>IMDB rating : 08/10</p>
+      <p>Release Date : 25/March/2022</p>
+    </aside>
+
+    <footer>Produced by : &lt D.V.V. Danayya &gt;</footer>
+
+    <!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
