applied div tag

--- a/main.html
+++ b/main.html
@@ -19,18 +19,22 @@
     </summary>
 
     <section>
-      <h3>Actors</h3>
-      <p>N.T. Rama Rao Jr.</p>
-      <p>Ram Charan Teja</p>
-      <p>Ajay Devgn</p>
-      <p>Alia Bhatt</p>
-      <p>Olivia Morris</p>
-      <p>Shriya Saran</p>
+      <div>
+        <h3>Actors</h3>
+        <p>N.T. Rama Rao Jr.</p>
+        <p>Ram Charan Teja</p>
+        <p>Ajay Devgn</p>
+        <p>Alia Bhatt</p>
+        <p>Olivia Morris</p>
+        <p>Shriya Saran</p>
+      </div>
     </section>
-	
+
     <section>
-      <h3>Quotes</h3>
-      <p>To capture the tiger we need a hunter.</p>
+      <div>
+        <h3>Quotes</h3>
+        <p>To capture the tiger we need a hunter.</p>
+      </div>
     </section>
 
     <aside>
@@ -38,7 +42,7 @@
       <p>Release Date : 25/March/2022</p>
     </aside>
 
-    <footer>Produced by : &lt D.V.V. Danayya &gt;</footer>
+    <footer><p>Produced by : &lt D.V.V. Danayya &gt;</p></footer>
 
     <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
