--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
       1920s.
     </summary>
 
-    <section>
+    <section id="actor">
       <div>
         <h3>Actors</h3>
         <p>N.T. Rama Rao Jr.</p>
@@ -30,7 +30,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="quote">
       <div>
         <h3>Quotes</h3>
         <p>To capture the tiger we need a hunter.</p>
@@ -42,7 +42,7 @@
       <p>Release Date : 25/March/2022</p>
     </aside>
 
-    <footer><p>Produced by : &lt D.V.V. Danayya &gt;</p></footer>
+    <footer><p>Produced by: &lt D.V.V. Danayya &gt;</p></footer>
 
     <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
